--- a/Meeting 11 - Function/food-recommendation.html
+++ b/Meeting 11 - Function/food-recommendation.html
@@ -9,8 +9,25 @@
 
     <h1>Food Recommendation System</h1>
 
-    <button onclick="recommendDish(['Risotto', 'Fried Rice', 'Sushi', 'Bibimbap', 'Curry Rice'])">Rice Dish</button>
-    <button onclick="recommendDish(['Udon', 'Pad Thai', 'Fried Noodles', 'Wonton Noodle Soup', 'Laksa'])">Noodle Dish</button>
+    <button onclick="recommendDish([
+        'Risotto',
+        'Fried Rice',
+        'Sushi',
+        'Bibimbap',
+        'Curry Rice'
+        ])">
+        Rice Dish
+    </button>
+
+    <button onclick="recommendDish([
+        'Udon',
+        'Pad Thai',
+        'Fried Noodles',
+        'Wonton Noodle Soup',
+        'Laksa'
+        ])">
+        Noodle Dish
+    </button>
 
     <script>
 
