--- a/Meeting 16 - Project/credentials-generator.html
+++ b/Meeting 16 - Project/credentials-generator.html
@@ -22,12 +22,12 @@
 
         const adjectives = [
             "happy", "funny", "smart", "creative", "awesome",
-            "happy", "funny", "smart", "creative", "awesome"
+            "pretty", "clever", "humble", "witty", "fantastic"
         ];
 
         const nouns = [
             "cat", "dog", "bird", "tree", "ocean",
-            "cat", "dog", "bird", "tree", "ocean"
+            "butterfly", "lion", "fox", "butter", "penguin"
         ];
 
         const symbols = [
@@ -35,23 +35,19 @@
             "^", "&", "*", "(", ")"
         ];
 
+        function getRandomElement(array) {
+            return array[Math.floor(Math.random() * array.length)];
+        }
+
         function generateUsername() {
-
-            var random = Math.floor(Math.random() * 10);
-            var newUsername = adjectives[random] + nouns[random];
-
-            return newUsername;
-
+            return getRandomElement(adjectives) + getRandomElement(nouns);
         }
 
         function generatePassword() {
-
-            var random = Math.floor(Math.random() * 10);
-            var noun = nouns[random];
-            var newPassword = noun.charAt(0).toUpperCase() + noun.slice(1) + random + symbols[random];
-
-            return newPassword;
-
+            const noun = getRandomElement(nouns);
+            const random = Math.floor(Math.random() * 100);
+            const symbol = getRandomElement(symbols);
+            return noun.charAt(0).toUpperCase() + noun.slice(1) + random + symbol;
         }
 
         document.getElementById("generateButton").addEventListener("click", function () {
@@ -60,12 +56,11 @@
             const generatePasswordOption = document.getElementById("genPassword").checked;
 
             if (generateUsernameOption) {
-                const username = generateUsername();
-                document.getElementById("result").textContent = `Username: ${username}`;
-            }
-            else if (generatePasswordOption) {
-                const password = generatePassword();
-                document.getElementById("result").textContent = `Password: ${password}`;
+                const newUsername = generateUsername();
+                document.getElementById("result").textContent = `Username: ${newUsername}`;
+            } else if (generatePasswordOption) {
+                const newPassword = generatePassword();
+                document.getElementById("result").textContent = `Password: ${newPassword}`;
             }
 
         });
