--- a/Table CSV/table_csv.html
+++ b/Table CSV/table_csv.html
@@ -66,6 +66,39 @@
 
                     });
 
+                    // Calculate values for Table 2
+                    const table2Data = [
+                        { category: 'Alpha', expression: 'A5 + A20' },
+                        { category: 'Beta', expression: 'A15 / A7' },
+                        { category: 'Charlie', expression: 'A13 * A12' }
+                    ];
+
+                    const table2 = document.createElement('table');
+                    table2.innerHTML = '<tr><th>Category</th><th>Value</th></tr>';
+
+                    table2Data.forEach(item => {
+
+                        const tr = document.createElement('tr');
+                        const tdCategory = document.createElement('td');
+                        tdCategory.textContent = item.category;
+                        tr.appendChild(tdCategory);
+
+                        const tdValue = document.createElement('td');
+
+                        const expression = item.expression.replace(/A(\d+)/g, (_, index) => {
+                            return parseInt(rows[index - 1].split(',')[1]);
+                        });
+
+                        tdValue.textContent = eval(expression);
+                        tr.appendChild(tdValue);
+
+                        table2.appendChild(tr);
+
+                    });
+
+                    document.body.appendChild(document.createElement('h1')).textContent = 'Table 2';
+                    document.body.appendChild(table2);
+
                 });
 
         </script>
