--- a/Table CSV/table_csv.html
+++ b/Table CSV/table_csv.html
@@ -6,16 +6,16 @@
     <title>Table CSV</title>
 
     <style>
-        table {
-            border-collapse: collapse;
-            width: 50%;
-            margin: 20px auto;
-        }
-
         table,
         th,
         td {
             border: 1px solid black;
+        }
+
+        table {
+            border-collapse: collapse;
+            width: 50%;
+            margin: 20px auto;
         }
 
         th,
@@ -27,81 +27,95 @@
         th {
             background-color: #f2f2f2;
         }
+
+        .table-container {
+            text-align: center;
+        }
     </style>
 
 </head>
 
 <body>
 
-    <h1>Table 1</h1>
+    <div class="table-container">
 
-    <table>
+        <h3>Table 1</h3>
 
-        <tr>
-            <th>Index #</th>
-            <th>Value</th>
-        </tr>
+        <table>
+            <tr>
+                <th>Index #</th>
+                <th>Value</th>
+            </tr>
+        </table>
 
-        <script>
 
-            fetch('Table_Input.csv')
-                .then(response => response.text())
-                .then(data => {
+        <h3>Table 2</h3>
+        <table></table>
 
-                    // Skip the header row
-                    const rows = data.trim().split('\n').slice(1);
+    </div>
 
-                    rows.forEach(row => {
+    <script>
 
-                        const columns = row.split(',');
-                        const tr = document.createElement('tr');
+        fetch('Table_Input.csv')
+            .then(response => response.text())
+            .then(data => {
 
-                        columns.forEach(column => {
-                            const td = document.createElement('td');
-                            td.textContent = column;
-                            tr.appendChild(td);
-                        });
+                // Skip the header row
+                const rows = data.trim().split('\n').slice(1);
 
-                        document.querySelector('table').appendChild(tr);
+                rows.forEach(row => {
 
+                    const columns = row.split(',');
+                    const tr = document.createElement('tr');
+
+                    columns.forEach(column => {
+                        const td = document.createElement('td');
+                        td.textContent = column;
+                        tr.appendChild(td);
                     });
 
-                    // Calculate values for Table 2
-                    const table2Data = [
-                        { category: 'Alpha', expression: 'A5 + A20' },
-                        { category: 'Beta', expression: 'A15 / A7' },
-                        { category: 'Charlie', expression: 'A13 * A12' }
-                    ];
-
-                    const table2 = document.createElement('table');
-                    table2.innerHTML = '<tr><th>Category</th><th>Value</th></tr>';
-
-                    table2Data.forEach(item => {
-
-                        const tr = document.createElement('tr');
-                        const tdCategory = document.createElement('td');
-                        tdCategory.textContent = item.category;
-                        tr.appendChild(tdCategory);
-
-                        const tdValue = document.createElement('td');
-
-                        const expression = item.expression.replace(/A(\d+)/g, (_, index) => {
-                            return parseInt(rows[index - 1].split(',')[1]);
-                        });
-
-                        tdValue.textContent = eval(expression);
-                        tr.appendChild(tdValue);
-
-                        table2.appendChild(tr);
-
-                    });
-
-                    document.body.appendChild(document.createElement('h1')).textContent = 'Table 2';
-                    document.body.appendChild(table2);
+                    document.querySelector('table').appendChild(tr);
 
                 });
 
-        </script>
+                // Calculate values for Table 2
+                const table2Data = [
+                    { category: 'Alpha', expression: 'A5 + A20' },
+                    { category: 'Beta', expression: 'A15 / A7' },
+                    { category: 'Charlie', expression: 'A13 * A12' }
+                ];
+
+                const table2 = document.createElement('table');
+                table2.innerHTML = '<tr><th>Category</th><th>Value</th></tr>';
+
+                table2Data.forEach(item => {
+
+                    const tr = document.createElement('tr');
+                    const tdCategory = document.createElement('td');
+                    tdCategory.textContent = item.category;
+                    tr.appendChild(tdCategory);
+
+                    const tdValue = document.createElement('td');
+
+                    const expression = item.expression.replace(/A(\d+)/g, (_, index) => {
+                        return parseInt(rows[index - 1].split(',')[1]);
+                    });
+
+                    tdValue.textContent = eval(expression);
+                    tr.appendChild(tdValue);
+
+                    table2.appendChild(tr);
+
+                });
+
+                // Append Table 2 inside a separate div
+                const table2Container = document.createElement('div');
+                table2Container.appendChild(table2);
+                document.body.appendChild(table2Container);
+
+            });
+
+    </script>
 
     </table>
 
