--- a/Table CSV/table_csv.html
+++ b/Table CSV/table_csv.html
@@ -1,3 +1,10 @@
+<!--
+    Due to cross-origin security policies, web browsers may not allow JavaScript
+    to fetch local files when opened directly from the file system.
+    
+    Run a local web server instead, by using XAMPP (start Apache server) or Node.js
+-->
+
 <!DOCTYPE html>
 <html>
 
