--- a/Meeting 11 - Function/onclick-button.html
+++ b/Meeting 11 - Function/onclick-button.html
@@ -14,7 +14,7 @@
 
         function intro() {
             document.write("Hi! <br>");
-            document.write("My mame is Jeff <br>");
+            document.write("My name is Jeff <br>");
             document.write("I want to be a game developer <br>");
         }
 
